[package]
name = "temp_env_vars_core"
version = "0.1.0"
authors = ["Günther Grill <grill.guenther@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Resets all environment variables changed in a defined scope"
readme = "../README.adoc"
homepage = "https://github.com/guenhter/temp_env_vars"
repository = "https://github.com/guenhter/temp_env_vars"
license = "MIT"
keywords = ["testing", "env", "env-variables", "env-vars"]
categories = ["development-tools::testing"]
exclude = [".github/", ".vscode/"]

[dependencies]

[dev-dependencies]
assertor = "0.0.2"
serial_test = "3.1.1"
