[package]
name = "temp_env_vars_macro"
version = "0.1.0"
authors = ["Günther Grill <grill.guenther@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Helper crate for temp_env_vars to enable macro support"
readme = "../README.adoc"
homepage = "https://github.com/guenhter/temp_env_vars"
repository = "https://github.com/guenhter/temp_env_vars"
license = "MIT"
keywords = ["testing", "env", "env-variables", "env-vars"]
categories = ["development-tools::testing"]
exclude = [".github/", ".vscode/"]

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.74", features = ["full"] }

[dev-dependencies]
assertor = "0.0.2"
serial_test = "3.1.1"
anyhow = "1.0.86"
temp_env_vars = { version = "0.1.0", path = ".." }

[lib]
proc-macro = true

[features]
default = []
debug_temp_env_vars = []
